[ #1167 ] - top downloads overflow fix

--- a/assets/css/dashboard.less
+++ b/assets/css/dashboard.less
@@ -51,6 +51,9 @@ Dashboard Widget CSS
         padding: 8px;
         display: block;
         font-weight: 500;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
 
 
